--- a/poster.tex
+++ b/poster.tex
@@ -187,6 +187,10 @@
                     \includegraphics[width=1.0\linewidth]{images/petROI.png}
                     \caption{Example of plotting a region of PET ROIs}
                 \end{figure}
+                \begin{figure}
+                    \includegraphics[width=1.0\linewidth]{images/precun.png}
+                    \caption{Example of plotting the Precuneus}
+                \end{figure}
 
             \end{block}
             
@@ -247,7 +251,7 @@
             \linebreak
             \linebreak Varghese T, Sheelakumari R, James JS, Mathuranath P. A review of neuroimaging biomarkers of Alzheimer's disease. Neurol Asia. 2013;18(3):239-248.
             
-           
+           \vspace{2cm}
             
         }
         
